finished responsiveness, added hero image, navbar changes colour when hero section is no longer visible

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  --header-footer-colour: #1E3A5F;
+  --main-bg-colour: #F8F9FA;
+  --button-color: #FF6F61;
+  --secondary-bg-color: #D1D1D1;
+  --secondary-color: #2ECC71;
+  --primary-colour: #FAF9F6;
+}
+
 body {
   line-height: 1.5;
   width: 100vw;
@@ -31,8 +40,9 @@ header {
 .sticky {
   position: fixed;
   z-index: 1001;
-  background-color: white;
   opacity: 0.95;
+  transition: background 100ms ease-in;
+  /* background-color: var(--header-footer-colour); */
 }
 
 header ul {
@@ -69,7 +79,8 @@ a {
 }
 
 .nav-link:hover {
-  color: #2c3e50;
+  color: var(--secondary-color);
+  transform: scale(1.1);
   font-weight: 600;
 }
 
@@ -88,7 +99,11 @@ a {
   padding: 15rem 2.5rem 5rem;
   font-size: 1.5rem;
   text-align: center;
-  width: 100%;
+  width: 100%; 
+  background-image: url("./assets/imgs/sky-img.jpg");
+  background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('./assets/imgs/sky-img.jpg');
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .hero--header {
@@ -102,7 +117,7 @@ a {
 
 /* ABOUT ME START */
 .about-me {
-  background-color: #e3fdfd;
+  background: var(--main-bg-colour);
 }
 
 .about-me-container {
@@ -123,12 +138,18 @@ a {
   margin-bottom: 3rem;
 }
 
-.about--me-summary > button {
+.contact-btn {
   font-size: 1.7rem;
   padding: 0.5rem 1.5rem;
   border-radius: 5%;
   margin-top: 1rem;
-  background-color: #71c9ce;
+  background-color: var(--button-color);
+  transition: all 100ms ease-in;
+}
+
+.contact-btn:hover {
+  background-color: var(--secondary-color);
+  transform: scale(1.1);
 }
 
 .sub-heading {
@@ -148,10 +169,11 @@ a {
 }
 
 .skill-block {
-  background-color: #71c9ce;
+  background-color: var(--header-footer-colour);
+  color: var(--primary-colour);
   padding: 0.5rem 1rem;
   border-radius: 5%;
-  box-shadow: 2px 5px 15px -4px #2c3e50;
+  box-shadow: 2px 5px 15px -4px var(--main-bg-colour);
 }
 
 /* PROJECTS START */
@@ -162,6 +184,7 @@ a {
   flex-direction: column;
   align-items: center;
   padding: 5rem 0 10rem 0;
+  background: linear-gradient(var(--main-bg-colour), #fff);
 }
 
 .project-heading {
@@ -288,6 +311,7 @@ blockquote {
   width: 100vw;
   justify-content: center;
   gap: 3rem;
+  background-color: var(--main-bg-colour);
 }
 
 .contact-me--text > h4 {
@@ -297,7 +321,7 @@ blockquote {
 /* FOOTER START */
 
 footer {
-  background-color: #2c3e50;
+  background-color: var(--header-footer-colour);
   color: white;
 }
 
@@ -308,7 +332,7 @@ footer p {
 .footer-top {
   border-bottom: 2px solid black;
   width: 60%;
-  margin: 3rem auto;
+  margin: 0 auto 3rem;
   padding: 3rem 0;
   display: flex;
   justify-content: space-between;
@@ -391,7 +415,7 @@ footer p {
 
   .contact > iframe {
     width: 100%;
-    height: 1500px;
+    height: 1200px;
     margin: 0;
     padding: 0;
   }
@@ -473,7 +497,7 @@ footer p {
 
   .contact > iframe {
     width: 100%;
-    height: 1500px;
+    height: 800px;
     margin: 0;
     padding: 0;
   }
@@ -485,7 +509,7 @@ footer p {
 
 @media screen and (min-width: 600px) {
   .contact > iframe {
-    height: 1000px;
+    height: 800px;
   }
 }
 
@@ -539,6 +563,7 @@ footer p {
 @media screen and (min-width: 1200px) {
   .contact > iframe {
     padding: 0 4rem;
+    height: 900px;
   }
 
   .about--me-summary {
@@ -557,6 +582,7 @@ footer p {
     flex-direction: column;
     gap: 0.5rem;
     padding-bottom: 0.5rem;
+    background-color: var(--secondary-bg-color);
   }
 
   .responsive li:not(:first-child) {
@@ -567,5 +593,11 @@ footer p {
 @media screen and (max-width: 768px) {
   ::-webkit-scrollbar {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #hero {
+    background-attachment: scroll;
   }
 }
